--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,9 +251,10 @@ footer {
 		text-align: center;
 	}
 	.aside {
-		width: 90%;
+		width: 60%;
 		margin: 0 auto;
 		float: none;
+		text-align: 
 	}
 	.bio {
 		float: none;
@@ -268,8 +269,9 @@ footer {
 	}
 
 	.nav {
-		border: 3px solid red;
 		display: block;
+        background-color: #fff;
+        width: 100%;
 	}
 
 }
